--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 </head>
 <body>
 
-
+    <h1 class="text-uppercase">Hello, world!</h1>
 
     <script src="js/script.js"></script>
     <script src="js/bootstrap.min.js"></script>
