--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                                     <a class="nav-link" href="#">Jobs</a>
                                     <div class="nav__buttons-link">
                                         <button type="button" class="btn btn-primary btn-sm my-btn nav-btn-color">Sign in</button>
-                                        <button type="button" class="btn btn-primary btn-sm my-btn mx-4">Large button</button>
+                                        <button type="button" class="btn btn-primary btn-sm my-btn mx-3 my-2">Large button</button>
                                     </div>
                                 </div>
                             </div>
