--- a/index.html
+++ b/index.html
@@ -90,6 +90,8 @@
                                 <div> <img src="img/firms/atlassian.svg" alt="atlassian" class="img-thumbnail"> </div>
                                 <div> <img src="img/firms/juniper.svg" alt="juniper" class="img-thumbnail"> </div>
                                 <div> <img src="img/firms/lacoste.svg" alt="lacoste" class="img-thumbnail"> </div>
+                                <div> <img src="img/firms/lacoste.svg" alt="lacoste" class="img-thumbnail"> </div>
+                                <div> <img src="img/firms/lacoste.svg" alt="lacoste" class="img-thumbnail"> </div>
                             </div>
                         </div>
 
